# guardian-of-the-sea

./: .gitignore  Cargo.toml
assets/: water_shader.wgsl
src/: assets.rs  collision.rs  main.rs  turret.rs  utils.rs
src/enemy/: mod.rs
src/player/: input.rs  mod.rs
src/projectile/: cannon.rs  mod.rs  rocket.rs  rocket_explosion.rs
src/turret/: mod.rs
src/ui/: health.rs  mod.rs
src/utils/: anim_sprite.rs  mod.rs
src/vessel/: mod.rs
src/vessel/ship/: mod.rs
src/vessel/station/: mod.rs
src/world/: camera.rs  mod.rs
